<resources>
    <string name="app_name">Keep Healthy</string>
    <string name="calorie_taken">0 kKal</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="water_taken">0 ml</string>
    <string name="sleep_hours">0 Hours</string>
    <string name="nav_open_drawer">open drawer</string>
    <string name="nav_close_drawer">close drawer</string>
    <string name="calorie_burnt">0 kKal</string>
    <string name="user_name">"Alias"</string>
    <string name="user_email">"Alias.com"</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="email_warning">Please enter email id</string>
    <string name="password_warning">Please enter your password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="shr_hint_username">Email</string>
    <string name="shr_app_name">Keep Healthy</string>
    <string name="shr_button_signin">SIGN IN</string>
    <string name="shr_button_signup">SIGN UP</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="failed">Authentication failed</string>

    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>


    <string name="action_settingss">Settings</string>
    <string name="setting">Menu</string>
    <string name="settingss">Switch</string>

    <string name="action_settings">Settings</string>
    <string-array name="quantity">
        <item>quantity</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="gender_type">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

</resources>
