<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back"
        android:paddingBottom="@android:dimen/app_icon_size"
        android:paddingLeft="@android:dimen/app_icon_size"
        android:paddingRight="@android:dimen/app_icon_size"
        android:paddingTop="@android:dimen/app_icon_size"
        tools:context=".date_picker" >

    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textColor="@color/breakfast"
            android:background="@color/colorAccent"
            android:onClick="setDate"
            android:text="@string/date_button_set" />

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/date_label_set"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="66dp"
            android:textSize="20dp"
            android:layout_toLeftOf="@+id/button1"
            android:text="@string/date_view_set"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginRight="-24dp"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selected"
            tools:text="asdf"
            android:textSize="15sp"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/button1"/>

</RelativeLayout>
