<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/loginPageBackgroundColor"
                tools:context=".Registration">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:background="@drawable/login_back"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">


        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:tint="?android:attr/textColorPrimary"
                android:src="@drawable/shr_logo"

        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:text="@string/shr_app_name"
                android:textAppearance="@style/TextAppearance.Shrine.Title"
                android:textAllCaps="true"
                android:textSize="16sp"/>

        <com.google.android.gms.common.SignInButton
                android:layout_gravity="center"
                android:id="@+id/sign_in_google"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView android:layout_width="match_parent"
                  android:text="Forget Password?"
                  android:gravity="center"
                  android:layout_marginBottom="10dp"
                  android:textColor="@color/link"
                  android:id="@+id/forgetPassword"
                  android:layout_height="wrap_content"/>


        <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:id="@+id/email_input"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/shr_hint_username">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/email"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_password"
                app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                    android:id="@+id/ah_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="click"
                    android:background="@drawable/addfood_back"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/shr_button_signin"
                    tools:ignore="OnClick"/>

        </RelativeLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_weight="1"
                    android:text="New User?"
                    android:textSize="16sp"
                    android:gravity="center|right"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            <TextView
                    android:layout_weight="1"
                    android:text="Sign Up"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:onClick="click"
                    android:textColor="@color/link"
                    android:textSize="16sp"
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" tools:ignore="OnClick"/>
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>
